name:                javrania
version:             0.1.0.0
synopsis:            Javran's blog
description:         Javran's blog
homepage:            https://github.com/Javran/javrania
license:             MIT
license-file:        LICENSE
author:              Javran Cheng
maintainer:          Javran.c@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable javrania
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8,
                       hakyll,
                       pandoc,
                       highlighting-kate

  hs-source-dirs:      src
  default-language:    Haskell2010