name:                javrania
version:             0.1.0.0
synopsis:            Javran's blog
description:         Javran's blog
homepage:            https://github.com/Javran/javrania
license:             MIT
license-file:        LICENSE
author:              Javran Cheng
maintainer:          Javran.c@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable javrania
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <4.8
                     , hakyll
                     , pandoc
                     , highlighting-kate
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Javran/javrania